# stashcast

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  APPLE_PODCASTS_VIDEO_INVESTIGATION.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  GITHUB_BUG_REPORT.md  GITHUB_PR_DESCRIPTION.md  Justfile  PLAN.md  Procfile  README.md  README_YTDLP_FIX.md  YTDLP_CONTRIBUTION_SUMMARY.md  applepodcasts_fixed.py  applepodcasts_video_fix.patch  bootstrap-web.sh  bootstrap.sh  docker-compose.coolify.yml  docker-compose.coolify2.yml  docker-compose.coolify3.yml  docker-compose.coolify4.yml  docker-compose.yml  huey.db-shm  huey.db-wal  manage.py  passenger_wsgi.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  run_dev.sh  setup.sh  test_download.sh  test_server.py  (+1 more)
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-cleaner.md  duplicate-finder.md  (+1 more)
demo_data/: drone_video.html  eragon_audio.html  multi-local.html  multi-mixed.html  sample.vtt
docs/: ARCHITECTURE.md  EXAMPLES.md  FETCH_COMMAND.md  INTERNATIONALIZATION.md  PLAN.md  SPOTIFY_EXAMPLES.md  TESTING_I18N.md  TRANSCODE_COMMAND.md  YOUTUBE_AUTH.md
locale/: README.md
media/: CLAUDE.md  admin.py  apps.py  context_processors.py  feeds.py  html_extractor.py  models.py  operations.py  processing.py  progress_tracker.py  signals.py  tasks.py  tests.py  utils.py  views.py
scripts/: check_translations.py
service/: __init__.py  download.py  process.py  resolve.py  strategy.py  transcode_service.py  web_adapter.py
stashcast/: asgi.py  settings.py  urls.py  wsgi.py
(+91 files in other folders)
