[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stashcast"
version = "0.1.0"
requires-python = ">=3.13"

[tool.setuptools]
packages = ["stashcast"]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "venv",
  "data_docker",
  "demo_data",
]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]

# Formatting specific rules
[tool.ruff.format]
quote-style = "single"
